<resources>

    <string name="app_name">LetUsKnow</string>
    <string name="message">Ajude-nos! Responda nossas pesquisas!</string>
    <string name="footer">Desenvolvido para a matéria de Design de Interfaces</string>
    <string name="start">Começar!</string>
    <string name="results">Ver resultados</string>
    <string name="resultado_pesquisa">Resultado da pesquisa</string>
    <string name="results_description">Botão para ver resultados</string>
    <string name="start_description">Botão para começar o questionário</string>
    <string name="title_activity_questionario">QuestionarioActivity</string>
    <string name="responder">Responder</string>
    <string name="responder_description">Responder a questão</string>
    <string name="sair">Sair</string>
    <string name="sair_description">Botão que sai do questionário</string>
    <string name="conclusao">Obrigado por responder o questionário!</string>
    <string name="error_button">OK</string>
    <string name="enviar_resultados">Enviar Resultados</string>
    <string name="enviado">As informações foram enviadas com sucesso!</string>
    <string name="voltar">Voltar</string>
    <string name="voltar_description">Botão para voltar para a tela principal</string>

</resources>
