<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="br.com.silas.letusknow.activity.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/image_margin"
        android:src="@drawable/logo_small" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="@dimen/title_margin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="@dimen/message_margin"
        android:accessibilityLiveRegion="polite"
        android:contentDescription="@string/message"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/message"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/message_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botao_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:accessibilityLiveRegion="polite"
        android:background="@color/colorBlue"
        android:contentDescription="@string/start_description"
        android:focusable="true"
        android:text="@string/start"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/botao_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botao_start"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:accessibilityLiveRegion="polite"
        android:background="@color/colorBlue"
        android:contentDescription="@string/results_description"
        android:focusable="true"
        android:text="@string/results"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botao_results"
        android:layout_margin="@dimen/footer_margin"
        android:accessibilityLiveRegion="polite"
        android:contentDescription="@string/footer"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/footer"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />

</RelativeLayout>
