<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context="br.com.silas.letusknow.activity.ConcluirActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:src="@drawable/logo_small" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#2e3899"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="25dp"
        android:accessibilityLiveRegion="polite"
        android:contentDescription="@string/conclusao"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/conclusao"
        android:textColor="#000"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botao_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:accessibilityLiveRegion="polite"
        android:background="#2e3899"
        android:contentDescription="@string/enviar_resultados"
        android:focusable="true"
        android:text="@string/enviar_resultados"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/botao_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botao_enviar"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:accessibilityLiveRegion="polite"
        android:background="#ab041a"
        android:contentDescription="@string/sair"
        android:focusable="true"
        android:text="@string/sair"
        android:textColor="#FFF" />

</RelativeLayout>
