<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context="br.com.silas.letusknow.activity.QuestionarioActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:src="@drawable/logo_small" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#2e3899"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="25dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_margin="25dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        android:gravity="center"
        android:textColor="#2e3899"
        android:textSize="25dp" />

    <Button
        android:id="@+id/botao_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:accessibilityLiveRegion="polite"
        android:background="#2e3899"
        android:contentDescription="@string/responder_description"
        android:focusable="true"
        android:text="@string/responder"
        android:textColor="#FFF" />

</RelativeLayout>
